--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ export(mxjq_roc)
 export(mxjq_sc)
 export(mxjq_sct)
 export(mxjq_sdf)
+export(mxjq_table0)
 export(mxjq_table1)
 export(mxjq_ulogit)
