--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(mxjq_1se)
 export(mxjq_density)
 export(mxjq_gcat)
 export(mxjq_gcon)
+export(mxjq_glmnetplot1)
+export(mxjq_glmnetplot2)
+export(mxjq_glmnetplot3)
 export(mxjq_ia)
 export(mxjq_mrocplot)
 export(mxjq_ndn)
